--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Curriculum Vitae</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="files/cv.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Lettre de motivation -->
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Lettre de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="files/lettreMotiv.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Message de motivation -->
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Message de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="files/messageMotiv.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Mail de relance -->
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Mail de relance</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="files/mailrelance2.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
     </div>
 </div>
@@ -185,7 +185,7 @@
 
     <!-- Image centrée -->
     <div class="flex justify-center">
-        <a href=""><img src="https://marketplace.canva.com/EAEg1P45hCw/1/0/1600w/canva-simple-travail-linkedin-banni%C3%A8re-VoKP4HFhK8A.jpg" alt="cliquez pour découvrir mon LinkdIn" class="rounded-lg shadow-md"></a>
+        <a href="https://www.linkedin.com/in/noah-lamy/"><img src="https://marketplace.canva.com/EAEg1P45hCw/1/0/1600w/canva-simple-travail-linkedin-banni%C3%A8re-VoKP4HFhK8A.jpg" alt="cliquez pour découvrir mon LinkdIn" class="rounded-lg shadow-md"></a>
     </div>
 </div>
 
