--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <h3 class="text-lg font-semibold mb-2">Recherche d'alternance</h3>
-                <a href="files/tableau alternance.xlsx" class="text-indigo-600 font-medium">Consulter le suivi
+                <a href="https://docs.google.com/spreadsheets/d/1Txd4ofLzCxLq7U79y9Vr7RyANs8Ye15jX1CGtkqgRu8/edit?usp=sharing" class="text-indigo-600 font-medium">Consulter le suivi
                     &rarr;</a>
             </div>
 
@@ -267,7 +267,7 @@
                     </div>
                 </div>
                 <h3 class="text-lg font-semibold mb-2">Montée en compétence</h3>
-                <a href="files/roadmap de compétences (1).xlsx" class="text-indigo-600 font-medium">Consulter la roadmap
+                <a href="https://docs.google.com/spreadsheets/d/1pJR2CgdO5Nm0APm8uqY4O2ecpmwl559AU-R_2VYUsHo/edit?usp=sharing" class="text-indigo-600 font-medium">Consulter la roadmap
                     &rarr;</a>
             </div>
         </div>
